Add BenchTaoObjGet and rename nodeGet as objGet